--- a/Houseprice.ipynb
+++ b/Houseprice.ipynb
@@ -37,7 +37,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **IMPORT LIBERARIES**"
+        "# **IMPORT LIBRARIES**"
       ],
       "metadata": {
         "id": "8WtWQmjW3wbh"
@@ -2379,7 +2379,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Evaluvation: MAE,MSE,RMSE\n",
+        "#Evaluation: MAE,MSE,RMSE\n",
         "from sklearn.metrics import mean_absolute_error\n",
         "from sklearn.metrics import mean_squared_error\n",
         "\n",
