--- a/Houseprice.ipynb
+++ b/Houseprice.ipynb
@@ -2316,7 +2316,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Evaluvation**"
+        "# **Evaluation**"
       ],
       "metadata": {
         "id": "ZujPQsvs6wGi"
